--- a/pom.xml
+++ b/pom.xml
@@ -32,11 +32,13 @@
 		</dependency>
 
 
-		<dependency>
-			<groupId>org.apache.poi</groupId>
-			<artifactId>poi</artifactId>
-			<version>3.16-beta2</version>
-		</dependency>
+<dependency>
+    <groupId>org.testng</groupId>
+    <artifactId>testng</artifactId>
+    <version>6.8.8</version>
+    <scope>test</scope>
+</dependency>
+
 
 
 		<dependency>
